--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
     <string name="sunday">Sunday</string>           <string name="sunday_short">Sun</string>
 
     <string name="weekdays">Weekdays</string>
-    <string name="weekend">Weekend</string>
+    <string name="weekends">Weekends</string>
     <string name="everyday">Every day</string>
 
     <plurals name="days_chosen">
@@ -68,4 +68,12 @@
 
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
+
+    <!--Errors!-->
+    <string name="missing_info_title">Could not create alarm</string>
+    <string name="missing_info_date">-No date was chosen.\n</string>
+    <string name="missing_info_time">-No time was chosen.\n</string>
+    <string name="missing_info_days">-No repeating days were chosen.\n</string>
+    <string name="missing_info_past">-Your chosen time lies in the past.\n</string>
+    <string name="missing_info_station">-No station was chosen.\n</string>
 </resources>
