--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,7 +63,7 @@
     <string name="delete">Delete</string>
     <string name="cancel">Cancel</string>
 
-    <string name="edit_alarm">Edit alarm</string>
+    <string name="alarm_settings">Alarm settings</string>
 
     <string name="delete_alarm_title">Delete alarm?</string>
     <string name="delete_alarm_message">Are you sure you want to delete this alarm?</string>
