--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,13 +36,20 @@
 
     <string name="alarm_recurring_dialog_expl">Alarm should occur every:</string>
     <!--All Weekdays-->
-    <string name="monday">Monday</string>           <string name="monday_short">Mon</string>
-    <string name="tuesday">Tuedsay</string>         <string name="tuesday_short">Tue</string>
-    <string name="wednesday">Wednesday</string>     <string name="wednesday_short">Wed</string>
-    <string name="thursday">Thursday</string>       <string name="thursday_short">Thu</string>
-    <string name="friday">Friday</string>           <string name="friday_short">Fri</string>
-    <string name="saturday">Saturday</string>       <string name="saturday_short">Sat</string>
-    <string name="sunday">Sunday</string>           <string name="sunday_short">Sun</string>
+    <string name="monday">Monday</string>
+    <string name="monday_short">Mon</string>
+    <string name="tuesday">Tuedsay</string>
+    <string name="tuesday_short">Tue</string>
+    <string name="wednesday">Wednesday</string>
+    <string name="wednesday_short">Wed</string>
+    <string name="thursday">Thursday</string>
+    <string name="thursday_short">Thu</string>
+    <string name="friday">Friday</string>
+    <string name="friday_short">Fri</string>
+    <string name="saturday">Saturday</string>
+    <string name="saturday_short">Sat</string>
+    <string name="sunday">Sunday</string>
+    <string name="sunday_short">Sun</string>
 
     <string name="weekdays">Weekdays</string>
     <string name="weekends">Weekends</string>
