--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,6 @@
     <string name="missing_info_days">-No repeating days were chosen.\n</string>
     <string name="missing_info_past">-Your chosen time lies in the past.\n</string>
     <string name="missing_info_station">-No station was chosen.\n</string>
+
+    <string name="alarm_already_gone">Alarm is already over!</string>
 </resources>
