--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,18 +79,20 @@
     <string name="station">Station</string>
 
     <!--Errors!--><!--Errors!--><!--Errors!--><!--Errors!--><!--Errors!-->
-    <string name="connection_error_title">Connection error :(</string>
-    <string name="connection_error_text">The connection to the Wiener Linien servers cannot be established.</string>
-    <string name="connection_error_text_add">The station picker will not work.</string>
+    <string name="no_connection_title">Connection error :(</string>
+    <string name="no_connection_text">The connection to the Wiener Linien servers cannot be established. Please make sure your internet connection is working and try again.</string>
+
+    <string name="server_broken_title">Server issues :(</string>
+    <string name="server_broken_text">The Wiener Linien servers cannot be reached. Please try again later.</string>
 
     <string name="no_steigs_error_title">No lines available :(</string>
     <string name="no_steigs_error_text">No lines are available for this station. Please try again later.</string>
 
     <string name="missing_info_title">Could not create alarm</string>
-    <string name="missing_info_date">-No date was chosen.\n</string>
-    <string name="missing_info_time">-No time was chosen.\n</string>
-    <string name="missing_info_days">-No repeating days were chosen.\n</string>
-    <string name="missing_info_past">-Your chosen time lies in the past.\n</string>
-    <string name="missing_info_station">-No station was chosen.\n</string>
+       <string name="missing_info_date">-Please choose your alarm date.\n</string>
+       <string name="missing_info_time">-Please choose your alarm time.\n</string>
+       <string name="missing_info_days">-Please choose your alarm days.\n</string>
+       <string name="missing_info_past">-Please choose a time in the future.\n</string>
+    <string name="missing_info_station">-Please choose a station.\n</string>
 
 </resources>
