--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,12 @@
 <resources>
     <string name="app_name">WienerLinien Alarm</string>
-    <string name="action_settings">Settings</string>
 
     <!--Main screen menu-->
-    <string name="delete_alarms">Delete alarms&#8230;</string>
+    <string name="list_empty">No alarms set</string>
 
     <!--Alarm Setup 1-->
     <string name="activity_one_time_alarms">One time</string>
     <string name="activity_recurring_alarms">Recurring</string>
-    <string name="title_activity_set_alarm">Set Alarms</string>
 
     <!--Alarm Setup 2-->
     <string name="activity_alarm_setter">Set Alarm</string>
