Use message string for "no steigs" snackbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,6 +79,8 @@
     <string name="choose_station">Choose station</string>
     <string name="choose_steig">Choose line and direction</string>
 
+    <string name="no_steigs_found">No departures available for this station</string>
+
     <string name="ok">OK</string>
     <string name="delete">Delete</string>
     <string name="cancel">Cancel</string>
